.cct.txt
   Compiling gam v0.2.1 (/Users/user/gam)
error[E0432]: unresolved import `power_law_common::report_power_law`
  --> tests/standard_gam_scaling.rs:28:5
   |
28 | use power_law_common::report_power_law as fit_and_report_power_law_inner;
   |     ^^^^^^^^^^^^^^^^^^----------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |                 |
   |     |                 help: a similar name exists in the module: `fit_power_law`
   |     no `report_power_law` in `power_law_common`

error[E0432]: unresolved imports `gam::basis::PeriodicSpline1DOptions`, `gam::basis::fit_periodic_spline_1d`
 --> tests/periodic_spline_1d.rs:1:18
  |
1 | use gam::basis::{PeriodicSpline1DOptions, fit_periodic_spline_1d};
  |                  ^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^
  |                  |                        |
  |                  |                        no `fit_periodic_spline_1d` in `terms::basis`
  |                  |                        help: a similar name exists in the module: `fit_periodic_bspline_curve`
  |                  no `PeriodicSpline1DOptions` in `terms::basis`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `gam` (test "periodic_spline_1d") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `gam` (test "standard_gam_scaling") due to 1 previous error
